<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".AddNewTaskFragment">

    <TextView
        android:id="@+id/addNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text="Add new task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInput"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/title"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@drawable/custom_input_text"
        app:endIconMode="clear_text"
        app:hintTextColor="@drawable/white_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNewTask"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:maxLength="28"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInput"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/description"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@drawable/custom_input_text"
        app:endIconMode="clear_text"
        app:hintTextColor="@drawable/white_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:maxLines="5"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePicketBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:padding="8dp"
        app:icon="@drawable/ic_date_picker"
        app:iconSize="35dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/date"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@drawable/custom_input_text"
        app:endIconMode="clear_text"
        app:hintTextColor="@drawable/white_color"
        app:layout_constraintStart_toEndOf="@id/datePicketBtn"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/timePickerBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:padding="8dp"
        app:icon="@drawable/ic_time_picker"
        app:iconSize="35dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/datePicketBtn"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/time"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@drawable/custom_input_text"
        app:endIconMode="clear_text"
        app:hintTextColor="@drawable/white_color"
        app:layout_constraintStart_toEndOf="@id/datePicketBtn"
        app:layout_constraintTop_toBottomOf="@id/dateInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/frog_green"
        android:text="@string/submit2"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/timeInputLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>