<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/testTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="20dp"
                android:text="Your test"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textSize="20sp"
                android:fontFamily="@font/font_sofia"
                tools:text="@string/question1_dummy_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/testTitleTextView"/>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/question1">

                <RadioButton
                    android:id="@+id/q1ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q1ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q1ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>
            </RadioGroup>

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textSize="20sp"
                android:fontFamily="@font/font_sofia"
                tools:text="@string/question1_dummy_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup1"/>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/question2">

                <RadioButton
                    android:id="@+id/q2ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q2ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q2ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:fontFamily="@font/font_sofia"
                tools:text="@string/question1_dummy_data"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/radioGroup2"/>

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/question3">

                <RadioButton
                    android:id="@+id/q3ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q3ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

                <RadioButton
                    android:id="@+id/q3ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/frog_green"
        android:text="@string/check"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>